# 260309_investor_research

./: README.md  pyproject.toml
documents_new/: 基于国泰安数据库的股票研究简报.md
processed_documents/: FINTECH PLATFORMS AND MUTUAL FUND DISTRIBUTION.md  Quantitative Analysis of Investor Behavior.md
questionaire/refs/: 中国个人投资者ETF投资行为研究 by claude.md  中国个人投资者ETF投资行为研究 by gemini.md
questionaire/requests/: 基金投资调查问卷内容0227.docx  基金投资调查问卷内容1224.docx  投资者多元资产配置调查问卷结果分析-0324.docx  投资者行为研究报告.docx  问卷分析模版20250114-数据底稿.xlsx
scripts/: 00_data_prep.py  01_herding.py  02_opinion_leadership.py  03_overconfidence.py  04_polarization.py  parse_pdfs.py
